Update button colors in index.html
Signed-off-by: CelloSerenity <195480169+CelloSerenity@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
             outline: none;
         }
         .custom-button.sidestore {
-            background-color: #0066cc;
+            background-color: #a405fa;
         }
         .custom-button.sidestore:hover,
         .custom-button.sidestore:focus {
             background-color: #0055aa;
         }
         .custom-button.altstore {
-            background-color: #63c06f;
+            background-color: #018084;
         }
         .custom-button.altstore:hover,
         .custom-button.altstore:focus {
             background-color: #4fa85a;
         }
         .custom-button.feather {
-            background-color: #6f42c1;
+            background-color: #848ef9;
         }
         .custom-button.feather:hover,
         .custom-button.feather:focus {
             background-color: #5a329f;
         }
         .custom-button.livecontainer {
-            background-color: #ff7a59;
+            background-color: #0784fc;
         }
         .custom-button.livecontainer:hover,
         .custom-button.livecontainer:focus {
