--- a/index.html
+++ b/index.html
@@ -53,25 +53,32 @@
             outline: none;
         }
         .custom-button.sidestore {
-            background-color: #0066cc;
+            background-color: #a405fa;
         }
         .custom-button.sidestore:hover,
         .custom-button.sidestore:focus {
-            background-color: #0055aa;
+            background-color: #8304c8;
         }
         .custom-button.altstore {
-            background-color: #63c06f;
+            background-color: #018084;
         }
         .custom-button.altstore:hover,
         .custom-button.altstore:focus {
-            background-color: #4fa85a;
+            background-color: #006f70;
         }
         .custom-button.feather {
-            background-color: #6f42c1;
+            background-color: #848ef9;
         }
         .custom-button.feather:hover,
         .custom-button.feather:focus {
-            background-color: #5a329f;
+            background-color: #6f79d3;
+        }
+        .custom-button.livecontainer {
+            background-color: #0784fc;
+        }
+        .custom-button.livecontainer:hover,
+        .custom-button.livecontainer:focus {
+            background-color: #056ed6;
         }
         .custom-button.neutral {
             background-color: #6c757d;
@@ -227,17 +234,20 @@
             const sidestoreTarget = `sidestore://source?url=${s}`;
             const altstoreTarget = `altstore-classic://source?url=${s}`;
             const featherTarget = `feather://source/${s}`;
+            const livecontainerTarget = `livecontainer://source?url=${s}`;
 
             const links = {
                 sidestore: base + sidestoreTarget,
                 altstore: base + altstoreTarget,
-                feather: base + featherTarget
+                feather: base + featherTarget,
+                livecontainer: base + livecontainerTarget
             };
 
             container.innerHTML = `
                 <a class="custom-button sidestore" href="${links.sidestore}" target="_blank" rel="noopener noreferrer">Open in SideStore</a>
                 <a class="custom-button altstore" href="${links.altstore}" target="_blank" rel="noopener noreferrer">Open in AltStore</a>
                 <a class="custom-button feather" href="${links.feather}" target="_blank" rel="noopener noreferrer">Open in Feather</a>
+                <a class="custom-button livecontainer" href="${links.livecontainer}" target="_blank" rel="noopener noreferrer">Open in LiveContainer</a>
                 <button class="custom-button neutral" id="copy-link-btn">Copy Source URL</button>
                 <button class="custom-button neutral" id="view-source-btn">View Source Data</button>
             `;
