Update loading message in links container
Signed-off-by: CelloSerenity <195480169+CelloSerenity@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 </head>
 <body>
     <h1>AltSource Redirector</h1>
-    <div id="links-container">Loading links...</div>
+    <div id="links-container">Loading...</div>
 
     <script>
         'use strict';
