--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <title>AltSource Redirector</title>
+    <title>AltDirect</title>
     <style>
         :root {
             --safe-top: env(safe-area-inset-top, 0px);
