StikStore: coming to an iOS device near you soon!

--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
         .custom-button.sidestore { background-color: #a405fa; }
         .custom-button.sidestore:hover, .custom-button.sidestore:focus { background-color: #8304c8; }
         .custom-button.altstore { background-color: #018084; }
-        .custom-button.altstore:hover, .custom-button.altstore:focus { background-color: #006f70; }
-        .custom-button.feather { background-color: #848ef9; }
-        .custom-button.feather:hover, .custom-button.feather:focus { background-color: #6f79d3; }
+        .custom-button.altstore:hover, .custom-button.altstore:focus { background-color: #007375; }
+        .custom-button.stikstore { background-color: #3b86f7; }
+        .custom-button.stikstore:hover, .custom-button.stikstore:focus { background-color: #316dc6; }
         .custom-button.livecontainer { background-color: #0784fc; }
         .custom-button.livecontainer:hover, .custom-button.livecontainer:focus { background-color: #056ed6; }
+        .custom-button.feather { background-color: #848ef9; }
+        .custom-button.feather:hover, .custom-button.feather:focus { background-color: #6f79d3; }
         .custom-button.neutral { background-color: #6c757d; }
         .custom-button.neutral:hover, .custom-button.neutral:focus { background-color: #5a6268; }
         .url-form {
@@ -340,8 +342,9 @@
             const linkMap = [
                 { key: 'sidestore', label: 'Open in SideStore', href: hrefWithR('sidestore'), cls: 'sidestore' },
                 { key: 'altstore', label: 'Open in AltStore Classic', href: hrefWithR('altstore'), cls: 'altstore' },
-                { key: 'feather', label: 'Open in Feather', href: hrefWithR('feather'), cls: 'feather' },
-                { key: 'livecontainer', label: 'Open in LiveContainer', href: hrefWithR('livecontainer'), cls: 'livecontainer' }
+                { key: 'stikstore', label: 'Open in StikStore', href: hrefWithR('stikstore'), cls: 'stikstore' },
+                { key: 'livecontainer', label: 'Open in LiveContainer', href: hrefWithR('livecontainer'), cls: 'livecontainer' },
+                { key: 'feather', label: 'Open in Feather', href: hrefWithR('feather'), cls: 'feather' }
             ];
 
             for (let i = 0; i < linkMap.length; i++) {
